--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dev.to",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Kumo-by-Theodo/articles.git"
+    "url": "https://github.com/vincentzan/articles.git"
   },
   "scripts": {
     "prettier": "prettier",
